# Hakaru-FLOLAC16

./: .gitignore  ColoredBalls.hs  Cont.hs  Discrete1.hs  LICENSE  Metropolis.hs  README.md  Syntax.hs  Util.hs  hakaru.cabal  plot.py
app/: Main.hs
src/: Bench.hs  Discrete1.hs  Distribution.hs  Examples1.hs  Memory.hs  Util.hs
