name:                hakaru
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hakaru#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hakaru-exe
  hs-source-dirs:      src
  main-is:             Bench.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 
  build-depends:       base, transformers, mtl, random, containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hakaru
